--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBCbTzMr7bW5Pu8XhGlXoYK8EdwwqbyPCA" />
+            android:value="MY API KEY" />
 
         <service
             android:name=".FirebaseJobService"
